--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,17 +1,38 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {% if error %}
-        <div class="alert alert-danger" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+{#    {% if error %}#}
+{#        <div class="alert alert-danger" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>#}
+{#    {% endif %}#}
 
-    <form action="{{ path('login_check') }}" method="post">
-        <label for="username">Nom d'utilisateur :</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+    <form method="post">
+        {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
 
-        <label for="password">Mot de passe :</label>
-        <input type="password" id="password" name="_password" />
+        {% if app.user %}
+            <div class="offset-2 col-8">
+                Vous êtes connecté en tant que {{ app.user.username }}, <a href="{{ path('logout') }}">Déconnexion</a>
+            </div>
+        {% endif %}
+        {% if app.user == null %}
+            <div class="container ">
+                <div class="offset-2 col-8">
+                    <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
+                    <label for="inputEmail">Email</label>
+                    <input type="text" value="{{ last_username }}" name="email" id="inputEmail" class="form-control"
+                           required autofocus>
+                    <label for="inputPassword">Mot de passe</label>
+                    <input type="password" name="password" id="inputPassword" class="form-control" required>
 
-        <button class="btn btn-success" type="submit">Se connecter</button>
+                    <input type="hidden" name="_csrf_token"
+                           value="{{ csrf_token('authenticate') }}">
+                    <hr>
+                    <button class="btn btn-lg btn-success offset-sm-12 offset-sm-2 col-sm-8 text-center" type="submit">
+                        Connexion
+                    </button>
+                </div>
+            </div>
+        {% endif %}
     </form>
 {% endblock %}
