User connected was reattach to task #3

--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -20,7 +20,7 @@
                                 {% if task.user is null %}
                                     "anonyme"
                                 {% else %}
-                                    {{ task.user }}
+                                    {{ task.user.username }}
                                 {% endif %}
                             </strong>
                         </p>
