--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -18,6 +18,7 @@
                     <th>Nom d'utilisateur</th>
                     <th>Adresse d'utilisateur</th>
                     <th>Actions</th>
+                    <th>Administrateur</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -28,6 +29,13 @@
                         <td>{{ user.email }}</td>
                         <td>
                             <a href="{{ path('user_edit', {'id' : user.id}) }}" class="btn btn-success btn-sm">Edit</a>
+                        </td>
+                        <td>
+                            {% for role in user.roles %}
+                                {% if role == 'ROLE_ADMIN' %}
+                                    <span class="glyphicon glyphicon-ok"></span>
+                                {% endif %}
+                            {% endfor %}
                         </td>
                     </tr>
                 {% endfor %}
