--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,6 @@
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
 
     <!-- Custom CSS -->
     <link href="{{ asset('css/shop-homepage.css') }}" rel="stylesheet">
@@ -27,7 +26,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-light navbar-fixed-top" style="background-color: #e3f2fd;" role="navigation">
+<nav class="navbar navbar-light fixed-top" style="background-color: #e3f2fd;" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand" href="/">To Do List app</a>
@@ -50,7 +49,7 @@
         {% endif %}
 
         {% if app.user %}
-            <a href="{{ path('logout') }}" class="pull-right btn btn-danger">Se déconnecter</a>
+                <a href="{{ path('logout') }}" class="btn btn-danger">Se déconnecter</a>
         {% endif %}
 
         {% if not app.user and 'login' != app.request.attributes.get('_route') %}
