--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -7,14 +7,23 @@
     <div class="row">
         {% for task in tasks %}
             <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
-                    <div class="caption">
+                <div class="card">
+                    <div class="card-title">
                         <h4 class="pull-right">
                             {% if task.isDone %}<span class="glyphicon glyphicon-ok"></span>{% else %}<span
                                     class="glyphicon glyphicon-remove"></span>{% endif %}
                         </h4>
-                        <h4><a href="{{ path('task_edit', {'id' : task.id }) }}">{{ task.title }}</a></h4>
+                        <h4>
+                            {{ task.title }}
+                            {% if is_granted('TASK_EDIT', task) %}
+                                <a href="{{ path('task_edit', {'id' : task.id }) }}" class="btn btn-secondary btn-sm"> Edit </a>
+                            {% endif %}
+                        </h4>
+                    </div>
+                    <div class="card-content">
                         <p>{{ task.content }}</p>
+                    </div>
+                    <div class="card-footer">
                         <p>Crée par :
                             <strong>
                                 {% if task.user is null %}
@@ -24,22 +33,27 @@
                                 {% endif %}
                             </strong>
                         </p>
+                        <div>
+                            <div class="row">
+                            <form action="{{ path('task_toggle', {'id' : task.id }) }}">
+                                <button class="btn btn-success btn-sm ">
+                                    {% if not task.isDone %}Marquer comme faite{% else %}Marquer non terminée{% endif %}
+                                </button>
+                            </form>
+                            {% if is_granted('TASK_DELETE', task) %}
+                                <form action="{{ path('task_delete', {'id' : task.id }) }}">
+                                    <button class="btn btn-danger btn-sm ">Supprimer</button>
+                                </form>
+                            {% endif %}
+                            </div>
+                        </div>
                     </div>
-                    <div>
-                        <form action="{{ path('task_toggle', {'id' : task.id }) }}">
-                            <button class="btn btn-success btn-sm pull-right">
-                                {% if not task.isDone %}Marquer comme faite{% else %}Marquer non terminée{% endif %}
-                            </button>
-                        </form>
-                        <form action="{{ path('task_delete', {'id' : task.id }) }}">
-                            <button class="btn btn-danger btn-sm pull-right">Supprimer</button>
-                        </form>
                 </div>
             </div>
-        </div>
         {% else %}
             <div class="alert alert-warning" role="alert">
-                Il n'y a pas encore de tâche enregistrée. <a href="{{ path('task_create') }}" class="btn btn-warning pull-right">Créer une tâche</a>
+                Il n'y a pas encore de tâche enregistrée. <a href="{{ path('task_create') }}"
+                                                             class="btn btn-warning pull-right">Créer une tâche</a>
             </div>
         {% endfor %}
     </div>
