--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,13 +39,9 @@
 <!-- Page Content -->
 <div class="container">
     <div class="row">
-        {% if app.user %}
-            {% for  role in app.user.roles %}
-                {% if role == 'ROLE_ADMIN' %}
-                    <a href="{{ path('user_list') }}" class="btn btn-success">Gérer les utilisateurs</a>
-                    <a href="{{ path('user_create') }}" class="btn btn-primary">Créer un utilisateur</a>
-                {% endif %}
-            {% endfor %}
+        {% if is_granted('USER_LIST') or is_granted('USER_CREATE') %}
+            <a href="{{ path('user_list') }}" class="btn btn-success">Gérer les utilisateurs</a>
+            <a href="{{ path('user_create') }}" class="btn btn-primary">Créer un utilisateur</a>
         {% endif %}
 
         {% if app.user %}
