--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -5,10 +5,11 @@
 {% endblock %}
 
 {% block body %}
-
+    {% if app.user %}
     <div class="row">
         <a href="{{ path('task_create') }}" class="btn btn-success">Créer une nouvelle tâche</a>
         <a href="{{ path('task_list') }}" class="btn btn-info">Consulter la liste des tâches à faire</a>
         <a href="{{ path('task_done_list') }}" class="btn btn-secondary">Consulter la liste des tâches terminées</a>
     </div>
+    {% endif %}
 {% endblock %}
