--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -18,7 +18,7 @@
         {% if app.user == null %}
             <div class="container ">
                 <div class="offset-2 col-8">
-                    <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
+                    <h1 class="h3 mb-3 font-weight-normal">Connection</h1>
                     <label for="inputEmail">Email</label>
                     <input type="text" value="{{ last_username }}" name="email" id="inputEmail" class="form-control"
                            required autofocus>
