--- a/templates/task/create.html.twig
+++ b/templates/task/create.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <h1 class="taskCreation">Créer une nouvelle tache</h1>
     <div class="row">
         {{ form_start(form, {'action' : path('task_create')}) }}
             {{ form_widget(form) }}
