openiconic is ok #17

--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -10,8 +10,8 @@
                 <div class="card">
                     <div class="card-title">
                         <h4 class="pull-right">
-                            {% if task.isDone %}<span class="glyphicon glyphicon-ok"></span>{% else %}<span
-                                    class="glyphicon glyphicon-remove"></span>{% endif %}
+                            {% if task.isDone %}<span class="oi oi-check float-right"></span>{% else %}<span
+                                    class="oi oi-x float-right"></span>{% endif %}
                         </h4>
                         <h4>
                             {{ task.title }}
