--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -33,8 +33,7 @@
                         <td>
                             {% for role in user.roles %}
                                 {% if role == 'ROLE_ADMIN' %}
-                                    <strong>Oui</strong>
-                                    <span class="glyphicon glyphicon-ok" ></span>
+                                    <span class="oi oi-check" ></span>
                                 {% endif %}
                             {% endfor %}
                         </td>
