--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -10,13 +10,17 @@
                 <div class="card">
                     <div class="card-title">
                         <h4 class="pull-right">
-                            {% if task.isDone %}<span class="oi oi-check float-right"></span>{% else %}<span
-                                    class="oi oi-x float-right"></span>{% endif %}
+                            {% if task.isDone %}
+                                <span class="oi oi-check float-right"></span>
+                            {% else %}
+                                <span class="oi oi-x float-right"></span>
+                            {% endif %}
                         </h4>
                         <h4>
                             {{ task.title }}
                             {% if is_granted('TASK_EDIT', task) %}
-                                <a href="{{ path('task_edit', {'id' : task.id }) }}" class="btn btn-secondary btn-sm"> Edit </a>
+                                <a href="{{ path('task_edit', {'id' : task.id }) }}" class="btn btn-secondary btn-sm">
+                                    Edit </a>
                             {% endif %}
                         </h4>
                     </div>
