try to test login #6

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,7 +47,7 @@
         {% endif %}
 
         {% if app.user %}
-                <a href="{{ path('logout') }}" class="btn btn-danger">Se déconnecter</a>
+                <a href="{{ path('logout') }}" class="btn btn-danger logout">Se déconnecter</a>
         {% endif %}
 
         {% if not app.user and 'login' != app.request.attributes.get('_route') %}
