--- a/templates/task/edit.html.twig
+++ b/templates/task/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1 class="taskEdit">Modifier la t$ache <strong>{{ task.title }}</strong></h1>
+    <h1 class="taskEdit">Modifier la tâche <strong>{{ task.title }}</strong></h1>
     <div class="row">
         {{ form_start(form, {'action' : path('task_edit', { 'id' : task.id })}) }}
             {{ form_widget(form) }}
