--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,10 +41,11 @@
 <!-- Page Content -->
 <div class="container">
     <div class="row">
+{#        {% if is_granted("USER_CREATE") %}#}
         {% if not app.user and 'homepage' == app.request.attributes.get('_route') %}
             <a href="{{ path('user_create') }}" class="btn btn-primary">S'inscrire</a>
         {% endif %}
-        {% if is_granted('USER_LIST') %}
+        {% if is_granted("USER_LIST") %}
             <a href="{{ path('user_list') }}" class="btn btn-success">Gérer les utilisateurs</a>
             <a href="{{ path('user_create') }}" class="btn btn-primary">Créer un utilisateur</a>
         {% endif %}
