--- a/templates/user/create.html.twig
+++ b/templates/user/create.html.twig
@@ -11,10 +11,8 @@
             {{ form_row(form.username) }}
             {{ form_row(form.password) }}
             {{ form_row(form.email) }}
-            {% if is_granted('USER_LIST') %}
+            {% if form.roles is defined  %}
                 {{ form_row(form.roles) }}
-            {% else %}
-                {{ form_row(form.roles,{'attr' : {"style": "display:none"}}) }}
             {% endif %}
             <hr>
             <button type="submit" class="btn btn-success pull-right">Ajouter</button>
