--- a/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block body %}
     <div class="container">
-        <h1>Il y à eu un problème</h1>
+        <h1>Il y a eu un problème</h1>
 
         <p>
             Il y a eu un problème, nous ne pouvons pas allez plus loin.
